[gd_scene load_steps=13 format=4 uid="uid://61vndkuswjgq"]

[ext_resource type="Script" path="res://main.gd" id="1_xxvb3"]
[ext_resource type="Texture2D" uid="uid://dnnliawktfx1p" path="res://Assets/World/Tileset.png" id="1_ypobh"]
[ext_resource type="PackedScene" uid="uid://n6paswmcoc2x" path="res://Player/player.tscn" id="2_qlywh"]
[ext_resource type="Script" path="res://Utils/camera.gd" id="4_fn0mj"]
[ext_resource type="PackedScene" uid="uid://bforfy1gv6nau" path="res://Speedrunning/finish.tscn" id="5_kai3u"]
[ext_resource type="PackedScene" uid="uid://bmojufbvd27jm" path="res://Speedrunning/speedrun_timer.tscn" id="5_sm15w"]
[ext_resource type="PackedScene" uid="uid://culdpijj5tkws" path="res://Speedrunning/leaderboard.tscn" id="7_g77eq"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v08cb"]
resource_name = "Main"
texture = ExtResource("1_ypobh")
margins = Vector2i(2, 15)
texture_region_size = Vector2i(26, 26)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-13, 0, 13, 0, 13, 13, -13, 13)
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -13, 0, 13, -13, 13, -13, -13)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, 0, -13, 0, -13, -13, 0, -13)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, 0, 0, 13, -13, 13, -13, 0)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, 13, 0, -13, 13, -13, 13, 13)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, 0, 0, -13, 13, -13, 13, 0)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(13, 0, -13, 0, -13, -13, 13, -13)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, 0, 13, 0, 13, 13, 0, 13)
2:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3rpbp"]
resource_name = "Corners"
texture = ExtResource("1_ypobh")
margins = Vector2i(2, 2)
texture_region_size = Vector2i(26, 26)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, 13, -13, 13, -13, -13, 0, -13, 13, -13, 13, 0, 0, 0)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(13, 0, 13, 13, -13, 13, -13, 0, -13, -13, 0, -13, 0, 0)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -13, 13, -13, 13, 13, 0, 13, -13, 13, -13, 0, 0, 0)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-13, 0, -13, -13, 13, -13, 13, 0, 13, 13, 0, 13, 0, 0)

[sub_resource type="TileSet" id="TileSet_g4s6d"]
tile_size = Vector2i(26, 26)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_v08cb")
sources/1 = SubResource("TileSetAtlasSource_3rpbp")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yoyvv"]
texture = ExtResource("1_ypobh")
margins = Vector2i(15, 15)
texture_region_size = Vector2i(26, 26)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, 0, 13, 13, -13, 13)

[sub_resource type="TileSet" id="TileSet_fhi4r"]
tile_size = Vector2i(26, 26)
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 2
sources/0 = SubResource("TileSetAtlasSource_yoyvv")

[node name="Main" type="Node2D"]
script = ExtResource("1_xxvb3")

[node name="WorldTilemap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD+//7/AAACAAMAAAD+/wAAAQAEAAQAAAD+////AAACAAMAAAD//wAAAAABAAIAAAAAAAAAAAABAAIAAAABAAAAAAABAAIAAAACAAAAAAABAAIAAAADAAAAAAABAAIAAAAEAAAAAAABAAIAAAAFAAAAAAABAAIAAAAGAAAAAAABAAIAAAAHAAAAAAABAAIAAAAIAAAAAAABAAIAAAAJAAAAAAABAAIAAAAKAAAAAAABAAIAAAALAAAAAQAFAAQAAAAMAP//AQAFAAQAAAANAP7/AQAFAAQAAAAOAP3/AQAFAAQAAAALAP//AAAAAAIAAAAMAP7/AAAAAAIAAAANAP3/AAAAAAIAAAAMAAAAAAABAAMAAAANAAAAAAABAAMAAAAOAAAAAAABAAMAAAAOAP//AAABAAMAAAANAP//AAABAAMAAAAOAP7/AAABAAMAAAAKAP//AAACAAEAAAAJAP//AAACAAEAAAAIAP//AAACAAEAAAAHAP//AAACAAEAAAAGAP//AAACAAEAAAAFAP//AAACAAEAAAAEAP//AAACAAEAAAADAP//AAACAAEAAAACAP//AAACAAEAAAABAP//AAACAAEAAAAAAP//AAACAAEAAAD/////AAACAAEAAAD///7/AAACAAEAAAAAAP7/AAACAAEAAAABAP7/AAACAAEAAAACAP7/AAACAAEAAAADAP7/AAACAAEAAAAEAP7/AAACAAEAAAAFAP7/AAACAAEAAAAGAP7/AAACAAEAAAAHAP7/AAACAAEAAAAIAP7/AAACAAEAAAAJAP7/AAACAAEAAAAKAP7/AAACAAEAAAALAP7/AAACAAEAAAALAP3/AAACAAEAAAAMAP3/AAACAAEAAAAKAP3/AAACAAEAAAAJAP3/AAACAAEAAAAIAP3/AAACAAEAAAAHAP3/AAACAAEAAAAGAP3/AAACAAEAAAAFAP3/AAACAAEAAAAEAP3/AAACAAEAAAADAP3/AAACAAEAAAACAP3/AAACAAEAAAABAP3/AAACAAEAAAAAAP3/AAACAAEAAAD///3/AAACAAEAAAD+//3/AAACAAMAAAAOAAEAAAABAAMAAAANAAEAAAABAAMAAAAMAAEAAAABAAMAAAALAAEAAAABAAMAAAAKAAEAAAABAAMAAAAJAAEAAAABAAMAAAAIAAEAAAABAAMAAAAHAAEAAAABAAMAAAAGAAEAAAABAAMAAAAFAAEAAAABAAMAAAAEAAEAAAABAAMAAAADAAEAAAABAAMAAAACAAEAAAABAAMAAAABAAEAAAABAAMAAAAAAAEAAAABAAMAAAD//wEAAAABAAMAAAD+/wEAAAABAAMAAAD9/wEAAAABAAMAAAD9/wAAAAABAAMAAAD9////AAABAAMAAAD9//7/AAABAAMAAAD9//3/AAABAAMAAAD8//3/AAAAAAMAAAD8//7/AAAAAAMAAAD8////AAAAAAMAAAD8/wAAAAAAAAMAAAD8/wEAAAAAAAMAAAD9/wIAAAABAAQAAAD+/wIAAAABAAQAAAD//wIAAAABAAQAAAAAAAIAAAABAAQAAAABAAIAAAABAAQAAAACAAIAAAABAAQAAAADAAIAAQAFAAMAAAAEAAIAAQAEAAMAAAAFAAIAAAABAAQAAAAGAAIAAAABAAQAAAAHAAIAAAABAAQAAAAIAAIAAAABAAQAAAAJAAIAAAABAAQAAAAKAAIAAAABAAQAAAALAAIAAAABAAQAAAAMAAIAAAABAAQAAAANAAIAAAABAAQAAAAOAAIAAAABAAQAAAD8/wIAAAAAAAQAAAD8//z/AAAAAAMAAAD8//v/AAAAAAIAAAD9//v/AAABAAIAAAD+//v/AAABAAIAAAD///v/AAABAAIAAAAAAPv/AAABAAIAAAABAPv/AAABAAIAAAACAPv/AAABAAIAAAADAPv/AAABAAIAAAAEAPv/AAABAAIAAAAFAPv/AAABAAIAAAAGAPv/AAABAAIAAAAHAPv/AAABAAIAAAD9//z/AAABAAMAAAD+//z/AQAEAAMAAAD///z/AAABAAQAAAAAAPz/AAABAAQAAAABAPz/AAABAAQAAAACAPz/AAABAAQAAAADAPz/AAABAAQAAAAEAPz/AAABAAQAAAAFAPz/AAABAAQAAAAGAPz/AAABAAQAAAAHAPz/AAABAAQAAAAOAPz/AAAAAAIAAAAPAPz/AAABAAIAAAAQAPz/AAACAAIAAAARAP3/AAACAAIAAAASAP7/AAACAAIAAAATAP//AAACAAIAAAAQAP3/AQAEAAQAAAARAP7/AQAEAAQAAAASAP//AQAEAAQAAAATAAAAAQAEAAQAAAAPAP3/AAABAAMAAAAPAP7/AAABAAMAAAAPAP//AAABAAMAAAAPAAAAAAABAAMAAAAPAAEAAAABAAMAAAAPAAIAAAABAAQAAAAQAAEAAAABAAMAAAARAAEAAAABAAMAAAASAAEAAAABAAMAAAASAAAAAAABAAMAAAARAAAAAAABAAMAAAAQAAAAAAABAAMAAAAQAP//AAABAAMAAAARAP//AAABAAMAAAAQAP7/AAABAAMAAAAUAAAAAAABAAIAAAAVAAAAAAABAAIAAAAWAAAAAAABAAIAAAAXAAAAAAABAAIAAAAYAAAAAAABAAIAAAAZAAAAAAABAAIAAAAaAAAAAAABAAIAAAAbAAAAAAABAAIAAAAcAAAAAAABAAIAAAAdAAAAAAABAAIAAAAeAAAAAQAFAAQAAAAeAP//AAAAAAMAAAAeAP7/AAAAAAMAAAAeAP3/AAAAAAMAAAAeAPz/AAAAAAMAAAAeAPv/AAAAAAMAAAAbAP7/AAABAAQAAAAaAP7/AAABAAQAAAAZAP7/AAABAAQAAAAYAP7/AAAAAAQAAAAYAP3/AAAAAAIAAAAZAP3/AAABAAIAAAAaAP3/AAABAAIAAAAbAP3/AAABAAIAAAAcAP3/AAACAAIAAAAcAP7/AAACAAQAAAAdAP//AAACAAEAAAAcAP//AAACAAEAAAAbAP//AAACAAEAAAAaAP//AAACAAEAAAAZAP//AAACAAEAAAAYAP//AAACAAEAAAAXAP//AAACAAEAAAAWAP//AAACAAEAAAAVAP//AAACAAEAAAAUAP//AAACAAEAAAAUAP7/AAACAAEAAAAVAP7/AAACAAEAAAAWAP7/AAACAAEAAAAXAP7/AAACAAEAAAAXAP3/AAACAAEAAAAWAP3/AAACAAEAAAAVAP3/AAACAAEAAAAUAP3/AAACAAEAAAATAP3/AAACAAEAAAATAP7/AAACAAEAAAASAP3/AAACAAEAAAARAPz/AAACAAEAAAASAPz/AAACAAEAAAATAPz/AAACAAEAAAAUAPz/AAACAAEAAAAVAPz/AAACAAEAAAAWAPz/AAACAAEAAAAXAPz/AAACAAEAAAAYAPz/AAACAAEAAAAZAPz/AAACAAEAAAAaAPz/AAACAAEAAAAbAPz/AAACAAEAAAAcAPz/AAACAAEAAAAdAPz/AAACAAEAAAAdAP3/AAACAAEAAAAdAP7/AAACAAEAAAAdAPv/AAACAAEAAAAcAPv/AAACAAEAAAAbAPv/AAACAAEAAAAaAPv/AAACAAEAAAAZAPv/AAACAAEAAAAYAPv/AAACAAEAAAAXAPv/AAACAAEAAAAWAPv/AAACAAEAAAAVAPv/AAACAAEAAAAVAPr/AAACAAEAAAAUAPr/AAACAAEAAAATAPr/AAACAAEAAAASAPr/AAACAAEAAAARAPr/AAACAAEAAAAQAPr/AAACAAEAAAAPAPr/AAACAAEAAAAOAPr/AAACAAEAAAAOAPv/AAACAAEAAAANAPv/AAACAAEAAAAMAPv/AAACAAEAAAALAPv/AAACAAEAAAAKAPv/AAACAAEAAAAJAPv/AAACAAEAAAAIAPv/AAACAAIAAAAPAPv/AAACAAEAAAAQAPv/AAACAAEAAAARAPv/AAACAAEAAAASAPv/AAACAAEAAAATAPv/AAACAAEAAAAUAPv/AAACAAEAAAAWAPr/AAACAAEAAAANAPr/AAACAAEAAAAMAPr/AAACAAEAAAAMAPz/AAACAAEAAAANAPz/AAACAAEAAAALAPz/AAACAAEAAAAKAPz/AAACAAEAAAAJAPz/AAACAAEAAAAIAPz/AAACAAQAAAAKAPr/AAACAAEAAAALAPr/AAACAAEAAAAXAPr/AAACAAEAAAAYAPr/AAACAAEAAAAZAPr/AAACAAEAAAAaAPr/AAACAAEAAAAbAPr/AAACAAEAAAAcAPr/AAACAAEAAAAdAPr/AAACAAEAAAAeAPr/AAAAAAMAAAD8//r/AAACAAEAAAD9//r/AAACAAEAAAD+//r/AAACAAEAAAD///r/AAACAAEAAAAAAPr/AAACAAEAAAABAPr/AAACAAEAAAACAPr/AAACAAEAAAADAPr/AAACAAEAAAAEAPr/AAACAAEAAAAFAPr/AAACAAEAAAAGAPr/AAACAAEAAAAHAPr/AAACAAEAAAAIAPr/AAACAAEAAAAJAPr/AAACAAEAAAAIAPn/AAACAAEAAAAHAPn/AAACAAEAAAAGAPn/AAACAAEAAAAFAPn/AAACAAEAAAAEAPn/AAACAAEAAAADAPn/AAACAAEAAAACAPn/AAACAAEAAAABAPn/AAACAAEAAAAAAPn/AAACAAEAAAD///n/AAACAAEAAAD+//n/AAACAAEAAAD9//n/AAACAAEAAAD8//n/AAACAAEAAAD7//n/AAACAAEAAAAJAPn/AAACAAEAAAAKAPn/AAACAAEAAAALAPn/AAACAAEAAAAMAPn/AAACAAEAAAANAPn/AAACAAEAAAAOAPn/AAACAAEAAAAPAPn/AAACAAEAAAAQAPn/AAACAAEAAAARAPn/AAACAAEAAAASAPn/AAACAAEAAAATAPn/AAACAAEAAAAUAPn/AAACAAEAAAAVAPn/AAACAAEAAAAWAPn/AAACAAEAAAAXAPn/AAACAAEAAAAYAPn/AAACAAEAAAAZAPn/AAACAAEAAAAaAPn/AAACAAEAAAAbAPn/AAACAAEAAAAcAPn/AAACAAEAAAAdAPn/AAACAAEAAAAeAPn/AAAAAAMAAAAeAPj/AQAFAAMAAAAdAPj/AAABAAQAAAAcAPj/AAABAAQAAAAbAPj/AAABAAQAAAAaAPj/AAABAAQAAAAZAPj/AAABAAQAAAAYAPj/AAABAAQAAAAXAPj/AAABAAQAAAAWAPj/AAABAAQAAAAVAPj/AAABAAQAAAAUAPj/AAABAAQAAAATAPj/AAABAAQAAAASAPj/AAABAAQAAAARAPj/AAABAAQAAAAQAPj/AAABAAQAAAAPAPj/AAABAAQAAAAOAPj/AAABAAQAAAANAPj/AAABAAQAAAAMAPj/AAABAAQAAAALAPj/AAABAAQAAAAKAPj/AAABAAQAAAAJAPj/AAABAAQAAAAIAPj/AAABAAQAAAAHAPj/AAABAAQAAAAGAPj/AAABAAQAAAAFAPj/AAABAAQAAAAEAPj/AAABAAQAAAADAPj/AAABAAQAAAACAPj/AAABAAQAAAABAPj/AAABAAQAAAAAAPj/AAABAAQAAAD///j/AAABAAQAAAD+//j/AAABAAQAAAD9//j/AAABAAQAAAD8//j/AAABAAQAAAD7//j/AAABAAQAAAAQAAIAAAABAAQAAAARAAIAAAABAAQAAAASAAIAAAABAAQAAAATAAIAAAABAAQAAAAUAAIAAAABAAQAAAAVAAIAAAABAAQAAAAVAAEAAAABAAMAAAAWAAEAAAABAAMAAAAXAAEAAAABAAMAAAAXAAIAAAABAAQAAAAYAAIAAAABAAQAAAAZAAIAAAABAAQAAAAaAAIAAAABAAQAAAAbAAIAAAABAAQAAAAcAAIAAAABAAQAAAAdAAIAAAABAAQAAAAeAAIAAAABAAQAAAAWAAIAAAABAAQAAAATAAEAAAABAAMAAAAUAAEAAAABAAMAAAAYAAEAAAABAAMAAAAZAAEAAAABAAMAAAAaAAEAAAABAAMAAAAbAAEAAAABAAMAAAAcAAEAAAABAAMAAAAdAAEAAAABAAMAAAAeAAEAAAABAAMAAAAfAAEAAAACAAMAAAAfAAAAAAACAAMAAAAfAP//AAACAAMAAAAfAP7/AAACAAMAAAAfAP3/AAACAAMAAAAfAPz/AAACAAMAAAAfAPv/AAACAAMAAAAfAPr/AAACAAMAAAAfAPn/AAACAAMAAAAfAPj/AAACAAMAAAAfAPf/AAACAAIAAAAfAAIAAAACAAQAAAAeAPf/AAABAAIAAAAdAPf/AAABAAIAAAAcAPf/AAABAAIAAAAbAPf/AAABAAIAAAAaAPf/AAABAAIAAAAZAPf/AAABAAIAAAAYAPf/AAABAAIAAAAXAPf/AAABAAIAAAAWAPf/AAABAAIAAAAVAPf/AAABAAIAAAAUAPf/AAABAAIAAAATAPf/AAABAAIAAAASAPf/AAABAAIAAAARAPf/AAABAAIAAAAQAPf/AAABAAIAAAAPAPf/AAABAAIAAAAOAPf/AAABAAIAAAANAPf/AAABAAIAAAAMAPf/AAABAAIAAAALAPf/AAABAAIAAAAKAPf/AAABAAIAAAAJAPf/AAABAAIAAAAIAPf/AAABAAIAAAAHAPf/AAABAAIAAAAGAPf/AAABAAIAAAAFAPf/AAABAAIAAAAEAPf/AAABAAIAAAADAPf/AAABAAIAAAACAPf/AAABAAIAAAABAPf/AAABAAIAAAD+//f/AAABAAIAAAD9//f/AAABAAIAAAD///f/AAABAAIAAAAAAPf/AAABAAIAAAD8//f/AAABAAIAAAD7//f/AAABAAIAAAD6//f/AAABAAIAAAD6//j/AQAEAAMAAAD6//n/AAACAAMAAAD6//r/AAACAAMAAAD6//v/AAACAAMAAAD6//z/AAACAAMAAAD6//3/AAACAAMAAAD6//7/AAACAAMAAAD6////AAACAAMAAAD6/wAAAAACAAMAAAD6/wEAAAACAAMAAAD6/wIAAAACAAMAAAD6/wMAAAACAAMAAAD6/wQAAQAEAAQAAAD6/wUAAAABAAQAAAD7/wQAAAABAAIAAAD5/wQAAAAAAAMAAAD5/wMAAAAAAAMAAAD5/wIAAAAAAAMAAAD5/wEAAAAAAAMAAAD5/wAAAAAAAAMAAAD5////AAAAAAMAAAD5//7/AAAAAAMAAAD5//3/AAAAAAMAAAD5//z/AAAAAAMAAAD5//v/AAAAAAMAAAD5//r/AAAAAAMAAAD5//n/AAAAAAMAAAD5//j/AAAAAAMAAAD5//f/AAAAAAIAAAD8/wQAAAABAAIAAAD9/wQAAAABAAIAAAD+/wQAAAABAAIAAAD//wQAAAABAAIAAAAAAAQAAAABAAIAAAABAAQAAAABAAIAAAACAAQAAAABAAIAAAD7/wUAAAABAAQAAAD8/wUAAAABAAQAAAD9/wUAAAABAAQAAAD+/wUAAAABAAQAAAD//wUAAAABAAQAAAAAAAUAAAABAAQAAAABAAUAAAABAAQAAAACAAUAAAABAAQAAAACAAMAAAACAAEAAAABAAMAAAACAAEAAAAAAAMAAAACAAEAAAD//wMAAAACAAEAAAD+/wMAAAACAAEAAAD9/wMAAAACAAEAAAD8/wMAAAACAAEAAAD7/wMAAAACAAEAAAD7/wIAAAACAAEAAAD7/wEAAAACAAEAAAD7/wAAAAACAAEAAAD7////AAACAAEAAAD7//7/AAACAAEAAAD7//3/AAACAAEAAAD7//z/AAACAAEAAAD7//v/AAACAAEAAAD7//r/AAACAAEAAAD5/wUAAAAAAAQAAAAEAAUAAAACAAQAAAADAAUAAAABAAQAAAAEAAQAAAACAAMAAAAEAAMAAAACAAMAAAADAAMAAAAAAAMAAAADAAQAAQAFAAQAAAA=")
tile_set = SubResource("TileSet_g4s6d")

[node name="ObstacleTilemap" type="TileMapLayer" parent="WorldTilemap"]
position = Vector2(0, -13)
tile_map_data = PackedByteArray("AAAXAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAZAAAAAAAAAAAAAAAaAAAAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_fhi4r")

[node name="Player" parent="." instance=ExtResource("2_qlywh")]

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("4_fn0mj")
target = NodePath("../Player")

[node name="PlayerStart" type="Node2D" parent="."]

[node name="Finish" parent="." instance=ExtResource("5_kai3u")]
position = Vector2(79, 103)

[node name="GUI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="SpeedrunTimer" parent="GUI/MarginContainer" instance=ExtResource("5_sm15w")]
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Leaderboard" parent="GUI/MarginContainer" instance=ExtResource("7_g77eq")]
visible = false
layout_mode = 2

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="player_reached_finish" from="Finish" to="." method="_on_finish_player_reached_finish"]
[connection signal="restart" from="GUI/MarginContainer/Leaderboard" to="." method="_on_leaderboard_restart"]
